# anomaly_detection

./: .gitignore  Project_Overview.md  README.md  my_script.ipynb  pyproject.toml  test_diagnose.sh
src/adapters/: anomaly_detection.py  repository.py
src/api/: flask_app.py
src/domain/: anomaly_detection.py  detection.py  diagnosis.py  diagnosis_precondition.py  model.py  operation.py  ports.py
src/entrypoints/: flask_app.py
src/service_layer/: workflow.py
tests/integration/: make_dummy_data.py  test_api.py
tests/unit/: test_domain_model.py  test_domain_service.py  test_model.py  test_services.py
