[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "anomaly-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "flask>=3.1.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
    "black>=26.3.0",
    "ipython>=9.11.0",
    "jupyterlab>=4.5.5",
    "ipykernel>=7.2.0",
]

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88                                                               

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
